--- a/references.bib
+++ b/references.bib
@@ -1,3 +1,14 @@
+@article{marcot2021optimal,
+  title={What is an optimal value of k in k-fold cross-validation in discrete Bayesian network analysis?},
+  author={Marcot, Bruce G and Hanea, Anca M},
+  journal={Computational Statistics},
+  volume={36},
+  number={3},
+  pages={2009--2031},
+  year={2021},
+  publisher={Springer}
+}
+
 @article{wong2019reliable,
   title={Reliable accuracy estimates from k-fold cross validation},
   author={Wong, Tzu-Tsung and Yeh, Po-Yang},
