Jolie - adding references & altered methods to lit review

--- a/references.bib
+++ b/references.bib
@@ -108,3 +108,42 @@
   year={2014},
   publisher={Royal Society of Chemistry}
 }
+@article{lei2020cross,
+  title={Cross-validation with confidence},
+  author={Lei, Jing},
+  journal={Journal of the American Statistical Association},
+  volume={115},
+  number={532},
+  pages={1978--1997},
+  year={2020},
+  publisher={Taylor \& Francis}
+}
+@article{rabinowicz2022cross,
+  title={Cross-validation for correlated data},
+  author={Rabinowicz, Assaf and Rosset, Saharon},
+  journal={Journal of the American Statistical Association},
+  volume={117},
+  number={538},
+  pages={718--731},
+  year={2022},
+  publisher={Taylor \& Francis}
+}
+@article{xu2018representative,
+  title={Representative splitting cross validation},
+  author={Xu, Lu and Hu, Ou and Guo, Yuwan and Zhang, Mengqin and Lu, Daowang and Cai, Chen-Bo and Xie, Shunping and Goodarzi, Mohammad and Fu, Hai-Yan and She, Yuan-Bin},
+  journal={Chemometrics and Intelligent Laboratory Systems},
+  volume={183},
+  pages={29--35},
+  year={2018},
+  publisher={Elsevier}
+}
+@article{filzmoser2009repeated,
+  title={Repeated double cross validation},
+  author={Filzmoser, Peter and Liebmann, Bettina and Varmuza, Kurt},
+  journal={Journal of Chemometrics: A Journal of the Chemometrics Society},
+  volume={23},
+  number={4},
+  pages={160--171},
+  year={2009},
+  publisher={Wiley Online Library}
+}
