--- a/index.qmd
+++ b/index.qmd
@@ -87,6 +87,9 @@ Zhang and Yang (2015) delve into the strategic use of cross-validation for model
 
 Likewise, Wong and Yeh (2019) contribute to the discourse by examining the reliability of accuracy estimates derived from k-fold cross-validation, cautioning against the uncritical increase of replications without considering the correlation between them, and recommending specific strategies for achieving more dependable accuracy estimates. More specifically, their experiments across 20 datasets indicate that accuracy estimates from different replications of k-fold cross-validation are generally highly correlated, especially as the number of folds increases. They instead recommend using a larger number of folds with fewer replications for performance evaluation. Particularly, their research concludes that ten-fold cross-validation yields the most significant scores among k-fold cross-validation techniques [@wong2019reliable]. A similar conclusion of the optimal for k is shared by Marcot, B. G., & Hanea, A. M. (2020), as their evidence from their study that explores the ideal value of k for k-fold cross-validation analysis showed that the ideal value of k is 10, however, 5 can be sufficient in some cases [@marcot2021optimal]. 
 
+Researchers are constantly proposing new ways to perform cross-validation to fit their needs and address issues with existing methods. Filzmoser et al. (2009) aimed to test a strategy that would enhance complex linear models from small datasets, as well as estimate prediction errors for new observations [@filzmoser2009repeated]. Their focus was repeated double cross-validation (rdCV).This strategy involves splitting the data into training and testing sets in an outer loop for estimating prediction, then an inner loop uses the training set produced in the outer loop to perform cross-validation. This process is repeated many times, producing an increasing number of predicted outcome values. These values can be used for better model performance and variability estimation. Xu et al. (2018) propose yet another method of cross-validation called representative splitting cross-validation (RSCV), with their goal being to ensure the calibration and validation sets are representative and uniformly distributed in the experimental space as possible [@xu2018representative]. They also highlight how this method can be used for latent variable selection. RSCV uses the DUPLEX algorithm to split the data sets, then k-fold cross-validation is applied using the split sets.
+
+
 Collectively, these papers illuminate the multifaceted nature of cross-validation, showcasing its critical role in model evaluation, selection, and generalization. From theoretical underpinnings to practical implementations, cross-validation emerges as an essential tool in a data scientist's arsenal, ensuring models are not only predictive but also generalizable across diverse datasets and contexts.
 
 
