Jolie - more lit review

--- a/references.bib
+++ b/references.bib
@@ -147,3 +147,11 @@
   year={2009},
   publisher={Wiley Online Library}
 }
+@inproceedings{yadav2016analysis,
+  title={Analysis of k-fold cross-validation over hold-out validation on colossal datasets for quality classification},
+  author={Yadav, Sanjay and Shukla, Sanyam},
+  booktitle={2016 IEEE 6th International conference on advanced computing (IACC)},
+  pages={78--83},
+  year={2016},
+  organization={IEEE}
+}
