--- a/references.bib
+++ b/references.bib
@@ -155,3 +155,11 @@
   year={2016},
   organization={IEEE}
 }
+@misc{Ranjan_2021, 
+  title={Introduction to k-fold cross-validation in Python},
+  url={https://sqlrelease.com/introduction-to-k-fold-cross-validation-in-python},
+  journal={SQLRelease},
+  author={Ranjan, Gopal Krishna},
+  year={2021},
+  month={Jul}
+  }
