--- a/index.qmd
+++ b/index.qmd
@@ -62,6 +62,8 @@ cross-validation and tends to be less time-consuming to conduct
 [@yadav2016analysis]. It divides data into a training set and a test
 set, usually in a 70-30 or 90-10 split.
 
+**Monte Carlo cross-validation:** Using random sampling without replacement from certain probability distributions when splitting your data sets [@james1980monte]. It aims to decrease overfitting by allowing the algorithm to better explore the experimental space.
+
 **K-Fold Cross-Validation:** The dataset is split into k equally sized
 folds. Each fold is used once as a test set while the rest serve as the
 training set.
