--- a/references.bib
+++ b/references.bib
@@ -163,3 +163,13 @@
   year={2021},
   month={Jul}
   }
+@article{james1980monte,
+  title={Monte Carlo theory and practice},
+  author={James, Frederick},
+  journal={Reports on progress in Physics},
+  volume={43},
+  number={9},
+  pages={1145},
+  year={1980},
+  publisher={IOP Publishing}
+}
